[package]
name = "xs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
lmdb-rkv = "0.14.0"
lmdb-sys = "0.8.0"
scru128 = { version = "2.2.0", features = ["serde"] }

[dev-dependencies]
indoc = "1.0.7"
temp-dir = "0.1.11"
